deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-api
  template:
    metadata:
      labels:
        app: my-api
    spec:
      containers:
        - name: my-api
          image: us-central1-docker.pkg.dev/civic-nation-450611-j2/mydotnetrepo/myapiproject:latest
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-second-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-second-api
  template:
    metadata:
      labels:
        app: my-second-api
    spec:
      containers:
        - name: my-second-api
          image: us-central1-docker.pkg.dev/civic-nation-450611-j2/mydotnetrepo/mysecondapiproject:latest
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: my-api-service
spec:
  type: NodePort
  selector:
    app: my-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: my-second-api-service
spec:
  type: NodePort
  selector:
    app: my-second-api
  ports:
    - protocol: TCP
      port: 90
      targetPort: 9090
