ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: my-api-service
      port:
        number: 80
  rules:
    - http:
      paths:
      - path: /api1
        pathType: Prefix
        backend:
          service:
            name: my-api-service
            port:
              number: 80
      - path: /api2
        pathType: Prefix
        backend:
          service:
            name: my-second-api-service
            port:
              number: 80
